<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog_confirm">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
 <!--        <ImageView
            android:id="@+id/image_record"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="150dp" /> -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/person_submit_tip"/>

        <EditText
            android:id="@+id/et_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_editor_style"
            android:layout_margin="10dp"
            android:textSize="30sp"
            android:hint="@string/person_tip" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_ok"
            android:textSize="24sp"
            android:text="@string/ok"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_cancel"
            android:textSize="24sp"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>